force-app/main/default/objects/Pricing_Item__c/Pricing_Item__c.object-meta.xml
<CustomObject>
    <label>Pricing Item</label>
    <nameField>
        <displayFormat>PI-{000000}</displayFormat>
        <label>Pricing Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>