force-app/main/default/objects/Pricing_Item__c/fields/Catalog_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Item_Number__c</fullName>
    <label>Catalog Item Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>