force-app/main/default/objects/Pricing_Item__c/fields/Contains_Multi_Price__c.field-meta.xml
<CustomField>
    <fullName>Contains_Multi_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Import set when a price cell had multiple values. Review raw fields and CSV.</description>
    <label>Contains multi-price cell</label>
    <type>Checkbox</type>
</CustomField>