force-app/main/default/objects/Pricing_Item__c/fields/Discount_Premium_Fee__c.field-meta.xml
<CustomField>
    <fullName>Discount_Premium_Fee__c</fullName>
    <label>Discount Premium Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>