force-app/main/default/objects/Pricing_Item__c/fields/Focus_Category__c.field-meta.xml
<CustomField>
    <fullName>Focus_Category__c</fullName>
    <label>Focus Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>