force-app/main/default/objects/Pricing_Item__c/fields/JWCC_Unit_Of_Issue__c.field-meta.xml
<CustomField>
    <fullName>JWCC_Unit_Of_Issue__c</fullName>
    <label>JWCC Unit Of Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>