force-app/main/default/objects/Pricing_Item__c/fields/JWCC_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>JWCC_Unit_Price__c</fullName>
    <label>JWCC Unit Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>