force-app/main/default/objects/Pricing_Item__c/fields/JWCC_Unit_Price_Raw__c.field-meta.xml
<CustomField>
    <fullName>JWCC_Unit_Price_Raw__c</fullName>
    <description>Original CSV cell when JWCC price had multiple values (comma or brace-wrapped). For manual review.</description>
    <label>JWCC Unit Price (raw multi)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>