force-app/main/default/objects/Pricing_Item__c/fields/List_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Unit_Price__c</fullName>
    <label>List Unit Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>