force-app/main/default/objects/Pricing_Item__c/fields/List_Unit_Price_Raw__c.field-meta.xml
<CustomField>
    <fullName>List_Unit_Price_Raw__c</fullName>
    <description>Original CSV cell when list price had multiple values. For manual review.</description>
    <label>List Unit Price (raw multi)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>