force-app/main/default/objects/Pricing_Item__c/fields/Pricing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Unit__c</fullName>
    <label>Pricing Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>