force-app/main/default/objects/Pricing_Item__c/fields/Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Category__c</fullName>
    <label>Service Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>